MYS-13: fix jump-panel styles.

--- a/client/src/app/profile/components/add-jump-panel/add-jump-panel.component.scss
+++ b/client/src/app/profile/components/add-jump-panel/add-jump-panel.component.scss
@@ -1,5 +1,5 @@
 .add-jump-panel {
-  width: 100%;
+  width: 80%;
 
   .mat-form-field {
     margin: 0 5px;
@@ -8,10 +8,6 @@
 
   .mat-form-field-infix {
     width: 115px;
-  }
-
-  .mat-expansion-panel {
-    margin: 0 35px;
   }
 }
 
@@ -25,5 +21,6 @@
 
   & > div {
     display: flex;
+    flex: 1;
   }
 }
